--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="%PUBLIC_URL%/css/cssfilename.css" rel="stylesheet">
+    <script src="%PUBLIC_URL%/js/jsfilename.js"></script>
     <title>React App</title>
   </head>
   <body>
