--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="%PUBLIC_URL%/css/resume.min.css" rel="stylesheet">
+  <link href="%PUBLIC_URL%/css/resume.css" rel="stylesheet">
 </head>
 
 <body>
